; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/soc/au1x/extr_psc-ac97.c_au1xpsc_ac97_suspend.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/soc/au1x/extr_psc-ac97.c_au1xpsc_ac97_suspend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32* }
%struct.snd_soc_dai = type { i32 }

@au1xpsc_ac97_workdata = common dso_local global %struct.TYPE_5__* null, align 8
@PSC_CTRL_DISABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dai*)* @au1xpsc_ac97_suspend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @au1xpsc_ac97_suspend(%struct.snd_soc_dai* %0) #0 {
  %2 = alloca %struct.snd_soc_dai*, align 8
  store %struct.snd_soc_dai* %0, %struct.snd_soc_dai** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** @au1xpsc_ac97_workdata, align 8
  %4 = call i32 @PSC_SEL(%struct.TYPE_5__* %3)
  %5 = call i32 @au_readl(i32 %4)
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** @au1xpsc_ac97_workdata, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = getelementptr inbounds i32, i32* %8, i64 0
  store i32 %5, i32* %9, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @au1xpsc_ac97_workdata, align 8
  %11 = call i32 @AC97_CFG(%struct.TYPE_5__* %10)
  %12 = call i32 @au_writel(i32 0, i32 %11)
  %13 = call i32 (...) @au_sync()
  %14 = load i32, i32* @PSC_CTRL_DISABLE, align 4
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** @au1xpsc_ac97_workdata, align 8
  %16 = call i32 @PSC_CTRL(%struct.TYPE_5__* %15)
  %17 = call i32 @au_writel(i32 %14, i32 %16)
  %18 = call i32 (...) @au_sync()
  ret i32 0
}

declare dso_local i32 @au_readl(i32) #1

declare dso_local i32 @PSC_SEL(%struct.TYPE_5__*) #1

declare dso_local i32 @au_writel(i32, i32) #1

declare dso_local i32 @AC97_CFG(%struct.TYPE_5__*) #1

declare dso_local i32 @au_sync(...) #1

declare dso_local i32 @PSC_CTRL(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
